--- a/css/latihan2/font-styling.css
+++ b/css/latihan2/font-styling.css
@@ -1,1 +1,14 @@
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100px;
+    font-weight: normal;
+    font-variant: small-caps;
+    font-style: italic;
+    line-height: 10px;
+    color: lightblue;
+    }
 
+p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+    }
