--- a/css/latihan3/style.css
+++ b/css/latihan3/style.css
@@ -1,1 +1,10 @@
-
+h1 {
+    color: rgb(52, 171, 171);
+    text-align: center;
+    text-indent: 10px;
+}
+p {
+    color:rgb(41, 90, 23);
+    text-decoration: underline;
+    text-transform: capitalize;
+}
