--- a/css/latihan4/style.css
+++ b/css/latihan4/style.css
@@ -1,1 +1,10 @@
-
+body {
+    background-color:burlywood;
+    background-image: url(../logo.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 137px;
+}
+p {
+    background: yellow url(../logo.png) center no-repeat;
+}
